修改一些错误